// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render selected RadioButton 1`] = `
<RadioButton
  checked={true}
>
  <Checkbox
    checked={true}
    checkedIcon={
      <RadioChecked
        className="tss-1ee86jc-checkedIcon"
      />
    }
    disabled={false}
    label={null}
    labelPosition="left"
    onCheck={[Function]}
    uncheckedIcon={
      <RadioUnchecked
        className="tss-11cpk1a-uncheckedIcon"
      />
    }
  >
    <div
      aria-checked={true}
      className="checkbox common__checkbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <RadioChecked
        className="tss-1ee86jc-checkedIcon"
      >
        <Icon
          className="tss-1ee86jc-checkedIcon"
          content="<path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>"
        >
          <svg
            className="common__icon tss-lks04k-root-checkedIcon"
            dangerouslySetInnerHTML={
              {
                "__html": "<path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>",
              }
            }
            style={
              {
                "fill": undefined,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </RadioChecked>
    </div>
  </Checkbox>
</RadioButton>
`;

exports[`RadioButton should render unselected RadioButton 1`] = `
<RadioButton>
  <Checkbox
    checkedIcon={
      <RadioChecked
        className="tss-1ee86jc-checkedIcon"
      />
    }
    disabled={false}
    label={null}
    labelPosition="left"
    onCheck={[Function]}
    uncheckedIcon={
      <RadioUnchecked
        className="tss-11cpk1a-uncheckedIcon"
      />
    }
  >
    <div
      className="checkbox common__checkbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <RadioUnchecked
        className="tss-11cpk1a-uncheckedIcon"
      >
        <Icon
          className="tss-11cpk1a-uncheckedIcon"
          content="<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>"
        >
          <svg
            className="common__icon tss-kvzpvq-root-uncheckedIcon"
            dangerouslySetInnerHTML={
              {
                "__html": "<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>",
              }
            }
            style={
              {
                "fill": undefined,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </RadioUnchecked>
    </div>
  </Checkbox>
</RadioButton>
`;
